<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fingerprint_authentication"/>

    <TextView 
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/scan_text"/>
    
    <ImageView 
        android:id="@+id/imageFinger"
        android:background="#FFFFFF"
        android:contentDescription="Finger Image"
        android:layout_width="200dp"
        android:layout_height="200dp"/>

    <Button 
        android:id="@+id/btnScanStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/scan_start"
        />
    <Button 
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/save"
        />
    <Button 
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/cancel"
        />

</LinearLayout>
