<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fingerprint_authentication"/>

    <TextView 
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_text"/>
    <ImageView 
        android:id="@+id/imageFinger"
        android:contentDescription="Finger Image"
        android:layout_width="500dp"
        android:layout_height="500dp"/>

    <Button 
        android:id="@+id/btnScanStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="指紋認証開始"
        />
    <Button 
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        />
    

</LinearLayout>
